--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,8 +18,8 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
+background = #BB222222
+background-alt = #CC444444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #555
@@ -62,7 +62,7 @@ font-6 = "Font Awesome 5 Brands:pixelsize=10;1"
 
 modules-left = bspwm i3
 modules-center = date clock 
-modules-right = xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-right = xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature powermenu
 
 tray-position = right
 tray-padding = 2
