--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -29,7 +29,7 @@ alert = #bd2c40
 random = #99FF99
 
 [bar/lambda]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 27
 ;offset-x = 1%
