--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -22,11 +22,13 @@ background = #BB222222
 background-alt = #CC444444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
-foreground-alt = #555
+foreground-alt = #BDBDBD
+;#555
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
-random = #99FF99
+random = #FFA000
+;#99FF99
 
 [bar/lambda]
 monitor = ${env:MONITOR:}
@@ -61,7 +63,7 @@ font-5 = "Font Awesome 5 Free:style=Solid:pixelsize=10;1"
 font-6 = "Font Awesome 5 Brands:pixelsize=10;1"
 
 modules-left = bspwm i3
-modules-center = date clock 
+modules-center = xwindow clock date 
 modules-right = xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature powermenu
 
 tray-position = right
@@ -85,6 +87,9 @@ cursor-scroll = ns-resize
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
+
+format-prefix-foreground = ${colors.foreground-alt}
+format-prefix-underline = ${colors.secondary}
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -210,7 +215,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = "  "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = CPU %percentage:2%%
@@ -218,7 +223,7 @@ label = CPU %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = "  "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
 label = RAM %percentage_used%%
@@ -256,11 +261,11 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp3s0
+interface = enp4s0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = "  "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
@@ -278,7 +283,7 @@ time = %H:%M:%S
 
 format-prefix = "  "
 format-prefix-foreground = ${colors.random}
-;format-underline = #0a6cf5
+format-underline = #0a6cf5
 
 label = %time%
 label-font = 4
@@ -287,17 +292,17 @@ label-font = 4
 type = internal/date
 interval = 5
 
-date =
+date = %Y/%m/%d
 date-alt = " %Y-%m-%d"
 
-time = %H:%M
+time = %H:%M:%S
 time-alt = %H:%M:%S
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
+format-prefix = "  "
+format-prefix-foreground = ${colors.random}
 format-underline = #0a6cf5
 
-label = %date% %time%
+label = %date%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -450,24 +455,27 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
+label-open = ""
+;
 label-open-foreground = ${colors.secondary}
-label-close =  cancel
+label-close = "cancel"
 label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
+menu-0-0 = ""
+menu-0-0-exec = systemctl suspend
+menu-0-1 = ""
+menu-0-1-exec = menu-open-1
+menu-0-2 = ""
+menu-0-2-exec = menu-open-2
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
+menu-1-1 = Reboot
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
+menu-2-0 = Power off
 menu-2-0-exec = sudo poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
