--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,7 +57,7 @@ exec_always --no-startup-id sudo xrandr --output HDMI-0 --primary --left-of DVI-
 
 ###### Shortcuts
 # Start a terminal.
-bindsym $alt+Control+t exec konsole
+bindsym $alt+Control+t exec kitty
 
 # Kill focused window.
 bindsym $alt+F4 kill
