--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -64,7 +64,7 @@ font-6 = "Font Awesome 5 Brands:pixelsize=10;1"
 
 modules-left = bspwm i3
 modules-center = xwindow clock date 
-modules-right = xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature powermenu
+modules-right = xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature powermenu
 
 tray-position = right
 tray-padding = 2
@@ -310,6 +310,8 @@ type = internal/pulseaudio
 format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
+
+click-right = pavucontrol &
 
 label-muted = 🔇 muted
 label-muted-foreground = #666
