:bug: Fix keybind conflict.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -148,7 +148,7 @@ bindsym $mod+Shift+agrave move container to workspace $ws10
 # Reload the configuration file.
 bindsym $mod+Control+c reload
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3).
-bindsym $mod+Shift+r restart
+bindsym $mod+Control+r restart
 # Exit i3 (logs you out of your X session).
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
