--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,6 +51,7 @@ set $ws9 "9"
 set $ws10 "10"
 
 #### Automatic software execution
+exec_always --no-startup-id /usr/bin/light-locker
 exec_always --no-startup-id $HOME/.lambdadotfiles/launch_compton.sh
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id sudo xrandr --output HDMI-0 --primary --left-of DVI-D-0
