--- a/.lambdadotfiles/.gitignore
+++ b/.lambdadotfiles/.gitignore
@@ -1,7 +1,7 @@
 #
 # LambdAurora's ignore file
 #
-# v0.18
+# v0.19
 
 # JetBrains
 .idea/
@@ -63,13 +63,18 @@ desktop.ini
 # File types
 *.dll
 *.db
-*.so
+*.tar.?z
+
+# Asset files automatic backup
+.*.png-autosave.kra
+*.png~
+
+# Compilation artifacts/Binaries
 *.o
+*.so
 *.dylib
 *.lib
 lib*.a
-*.png~
-*.tar.?z
 
 # Common
 bin/
