--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/pack/plugins/start/vim-toml"]
 	path = .vim/pack/plugins/start/vim-toml
 	url = https://github.com/cespare/vim-toml.git
+[submodule ".vim/bundle/vim-gradle"]
+	path = .vim/bundle/vim-gradle
+	url = https://github.com/davewongillies/vim-gradle.git
