--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,7 +1,7 @@
 ##########################################################################
 ##########################################################################
 ###                                                                    ###
-###                LambdAurora's Compton configuration                 ###
+###                 LambdAurora's Picom configuration                  ###
 ###                                                                    ###
 ##########################################################################
 ##########################################################################
@@ -10,18 +10,16 @@ backend = "glx";
 
 ## Style
 # Blur
-blur-kern = "7x7box"
-blur-method = "dual_kawase"
-#blur-kern = "11,11,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#blur-kern = "7,7,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
-#blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#blur-kern = "3,3,1,1,1,1,1,1,1,1";
-blur-background = true;
-blur-background-frame = true;
-blur-background-fixed = true;
-blur-background-exclude = [
-	"window_type = 'dock'",
-	"window_type = 'desktop'",
-	"_GTK_FRAME_EXTENTS@:c"
-];
-
+blur:
+{
+	method = "dual_kawase";
+	kern = "7x7box";
+	background = true;
+	background-frame = true;
+	background-fixed = true;
+	background-exclude = [
+		"window_type = 'dock'",
+		"window_type = 'desktop'",
+		"_GTK_FRAME_EXTENTS@:c"
+	];
+}
